--- a/index.html
+++ b/index.html
@@ -11,8 +11,33 @@
 <body>
     <header>
         <h1>La montagne ça vous gagne</h1>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo, cum itaque nostrum id corrupti.</h2>
+        <nav class="nav-bar">
+            <ul class="nav-pages">
+                <li>this is massively</li>
+                <li>generic page</li>
+                <li>elements reference</li>
+            </ul>
+            <ul class="social">
+                <li><i class="fa-brands fa-twitter"></i><img src="./assets/img/twitter-brands-solid.svg"
+                        alt="logo twitter"></li>
+                <li><i class="fa-brands fa-facebook-f"></i><img src="./assets/img/facebook-f-brands-solid.svg"
+                        alt="logo facebook"></li>
+                <li><i class="fa-brands fa-instagram"></i><img src="./assets/img/instagram-brands-solid.svg"
+                        alt="logo instagram"></li>
+            </ul>
+        </nav>
 
     </header>
+    <main class="main-box">
+        <h3>April 25, 2017</h3>
+        <h4>And this is a massive headline</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores in, veniam quibusdam adipisci tempora ex
+            mollitia. Deserunt perspiciatis odio enim dolorum incidunt quisquam nulla! Eos libero exercitationem rem
+            architecto adipisci?</p>
+        <img src="./assets/img/pic01.jpg" alt="">
+        <button>Full story</button>
+    </main>
 
 
 </body>
