--- a/index.html
+++ b/index.html
@@ -38,6 +38,72 @@
         <img src="./assets/img/pic01.jpg" alt="">
         <button>Full story</button>
     </main>
+    <section>
+        <div class="section-box">
+            <div class="section-left">
+                <h3>April 24, 2017</h3>
+                <h4>Sed magna ipsum faucibus</h4>
+                <img src="./assets/img/pic02.jpg" alt="panorama forêt">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente aperiam sequi iure dolorem
+                    adipisci
+                    ex, ad temporibus inventore omnis molestias nulla. Corporis exercitationem rem velit?</p>
+                <button>full story</button>
+            </div>
+            <div class="section-right">
+                <h3>April 22, 2017</h3>
+                <h4>primis eget imperdiet lorem</h4>
+                <img src="./assets/img/pic03.jpg" alt="personnes sur flan de montagne">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error recusandae ab repellendus
+                    aliquam, fuga harum enim pariatur neque tempora nulla tenetur, doloribus nam! Aliquam.</p>
+                <button>full story</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-box">
+            <div class="formulaire">
+                <form action="">
+                    <p>name</p>
+                    <input type="text" id="firstname" placeholder="">
+                    <p>email</p>
+                    <input type="text" id="firstname" placeholder="">
+                    <p>message</p>
+                    <textarea cols="30" rows="10" placeholder=""></textarea>
+                </form>
+                <input type="submit" value="send message" id="btn-submit">
+            </div>
+            <div class="contact-box-container">
+                <div class="adress">
+                    <h5>adress</h5>
+                    <p>1234 Somewhere Road n87257 Nashville, TN 00000-0000</p>
+                </div>
+                <div class="phone">
+                    <h5>phone</h5>
+                    <p>(000)000-0000</p>
+                </div>
+                <div class="email">
+                    <h5>email</h5>
+                    <p>info@untilted.itd</p>
+                </div>
+                <div class="social">
+                    <h5>social</h5>
+                    <div class="link-bar">
+                        <ul>
+                            <li><button><i class="fa-brands fa-twitter"></i><img
+                                        src="./assets/img/twitter-brands-solid.svg" alt="logo twitter"></button></li>
+                            <li><button><i class="fa-brands fa-facebook-f"></i><img
+                                        src="./assets/img/facebook-f-brands-solid.svg" alt="logo facebook"></button>
+                            </li>
+                            <li><button><i class="fa-brands fa-instagram"></i><img
+                                        src="./assets/img/instagram-brands-solid.svg" alt="logo instagram"></button>
+                            </li>
+                            <li><button></button></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
