--- a/index.html
+++ b/index.html
@@ -87,19 +87,20 @@
                 </div>
                 <div class="social">
                     <h5>social</h5>
-                    <div class="link-bar">
+                    <nav class="link-bar">
                         <ul>
-                            <li><button><i class="fa-brands fa-twitter"></i><img
-                                        src="./assets/img/twitter-brands-solid.svg" alt="logo twitter"></button></li>
-                            <li><button><i class="fa-brands fa-facebook-f"></i><img
-                                        src="./assets/img/facebook-f-brands-solid.svg" alt="logo facebook"></button>
+                            <li><i class="fa-brands fa-twitter"></i><img src="./assets/img/twitter-brands-solid.svg"
+                                    alt="logo twitter"></li>
+                            <li><i class="fa-brands fa-facebook-f"></i><img
+                                    src="./assets/img/facebook-f-brands-solid.svg" alt="logo facebook">
                             </li>
-                            <li><button><i class="fa-brands fa-instagram"></i><img
-                                        src="./assets/img/instagram-brands-solid.svg" alt="logo instagram"></button>
+                            <li><i class="fa-brands fa-instagram"></i><img src="./assets/img/instagram-brands-solid.svg"
+                                    alt="logo instagram">
                             </li>
-                            <li><button></button></li>
+                            <li><i class="fa-brands fa-github"></i><img src="./assets/img/github-brands-solid.svg"
+                                    alt=""></li>
                         </ul>
-                    </div>
+                    </nav>
                 </div>
             </div>
         </div>
