--- a/index.html
+++ b/index.html
@@ -2,111 +2,107 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La montagne ça vous gagne</title>
-    <link rel="stylesheet" href="./assets/styles/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>La Montagne</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/styles/index.css">
 </head>
 
 <body>
-    <header>
-        <h1>La montagne ça vous gagne</h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat illo, cum itaque nostrum id corrupti.</h2>
-        <nav class="nav-bar">
-            <ul class="nav-pages">
-                <li>this is massively</li>
-                <li>generic page</li>
-                <li>elements reference</li>
-            </ul>
-            <ul class="social">
-                <li><i class="fa-brands fa-twitter"></i><img src="./assets/img/twitter-brands-solid.svg"
-                        alt="logo twitter"></li>
-                <li><i class="fa-brands fa-facebook-f"></i><img src="./assets/img/facebook-f-brands-solid.svg"
-                        alt="logo facebook"></li>
-                <li><i class="fa-brands fa-instagram"></i><img src="./assets/img/instagram-brands-solid.svg"
-                        alt="logo instagram"></li>
-            </ul>
-        </nav>
+  <header>
+    <div class="header-content">
+      <h1>la montagne<br>ça vous gagne</h1>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius aspernatur deleniti repudiandae iure esse quam?
+      </p>
+      <span><a href="#main"><i class="fa-solid fa-arrow-down"></i></a></span>
+    </div>
+    <nav>
+      <ul class="nav-left">
+        <li>this is massively</li>
+        <li>generic page</li>
+        <li>elements reference</li>
+      </ul>
+      <ul class="nav-right">
+        <li><i class="fa-brands fa-twitter"></i></li>
+        <li><i class="fa-brands fa-facebook-f"></i></li>
+        <li><i class="fa-brands fa-instagram"></i></li>
+        <li><i class="fa-brands fa-github"></i></li>
+      </ul>
+    </nav>
+  </header>
 
-    </header>
-    <main class="main-box">
-        <h3>April 25, 2017</h3>
-        <h4>And this is a massive headline</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores in, veniam quibusdam adipisci tempora ex
-            mollitia. Deserunt perspiciatis odio enim dolorum incidunt quisquam nulla! Eos libero exercitationem rem
-            architecto adipisci?</p>
-        <img src="./assets/img/pic01.jpg" alt="">
-        <button>Full story</button>
-    </main>
-    <section>
-        <div class="section-box">
-            <div class="section-left">
-                <h3>April 24, 2017</h3>
-                <h4>Sed magna ipsum faucibus</h4>
-                <img src="./assets/img/pic02.jpg" alt="panorama forêt">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente aperiam sequi iure dolorem
-                    adipisci
-                    ex, ad temporibus inventore omnis molestias nulla. Corporis exercitationem rem velit?</p>
-                <button>full story</button>
-            </div>
-            <div class="section-right">
-                <h3>April 22, 2017</h3>
-                <h4>primis eget imperdiet lorem</h4>
-                <img src="./assets/img/pic03.jpg" alt="personnes sur flan de montagne">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae error recusandae ab repellendus
-                    aliquam, fuga harum enim pariatur neque tempora nulla tenetur, doloribus nam! Aliquam.</p>
-                <button>full story</button>
-            </div>
-        </div>
+  <main id="main">
+    <section class="section1">
+      <span>April 25, 2017</span>
+      <h2>and this is a <br>massive headline</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil debitis quisquam, ipsa voluptate amet
+        voluptatum dolores numquam impedit illo sequi asperiores deleniti beatae? Illum, voluptatibus?</p>
+      <img src="./assets/img/pic01.jpg" alt="img-hiking">
+      <button class="btn">full story</button>
+      </div>
     </section>
-    <footer>
-        <div class="footer-box">
-            <div class="formulaire">
-                <form action="">
-                    <p>name</p>
-                    <input type="text" id="firstname" placeholder="">
-                    <p>email</p>
-                    <input type="text" id="firstname" placeholder="">
-                    <p>message</p>
-                    <textarea cols="30" rows="10" placeholder=""></textarea>
-                </form>
-                <input type="submit" value="send message" id="btn-submit">
-            </div>
-            <div class="contact-box-container">
-                <div class="adress">
-                    <h5>adress</h5>
-                    <p>1234 Somewhere Road n87257 Nashville, TN 00000-0000</p>
-                </div>
-                <div class="phone">
-                    <h5>phone</h5>
-                    <p>(000)000-0000</p>
-                </div>
-                <div class="email">
-                    <h5>email</h5>
-                    <p>info@untilted.itd</p>
-                </div>
-                <div class="social">
-                    <h5>social</h5>
-                    <nav class="link-bar">
-                        <ul>
-                            <li><i class="fa-brands fa-twitter"></i><img src="./assets/img/twitter-brands-solid.svg"
-                                    alt="logo twitter"></li>
-                            <li><i class="fa-brands fa-facebook-f"></i><img
-                                    src="./assets/img/facebook-f-brands-solid.svg" alt="logo facebook">
-                            </li>
-                            <li><i class="fa-brands fa-instagram"></i><img src="./assets/img/instagram-brands-solid.svg"
-                                    alt="logo instagram">
-                            </li>
-                            <li><i class="fa-brands fa-github"></i><img src="./assets/img/github-brands-solid.svg"
-                                    alt=""></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </footer>
 
+    <section class="section2">
+      <div class="left-part">
+        <span>April 24, 2017</span>
+        <h3>sed magna<br>ipsum faucibus</h3>
+        <img src="./assets/img/pic02.jpg" alt="forest">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nihil fuga quia voluptate laudantium
+          dignissimos incidunt praesentium ipsam officiis laborum.</p>
+        <button class="btn">full story</button>
+      </div>
+      <div class="right-part">
+        <span>April 22, 2017</span>
+        <h3>primis eget<br>imperdiet lorem</h3>
+        <img src="./assets/img/pic03.jpg" alt="forest">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nihil fuga quia voluptate laudantium
+          dignissimos incidunt praesentium ipsam officiis laborum.</p>
+        <button class="btn">full story</button>
+      </div>
+    </section>
+  </main>
 
+  <footer>
+    <form action="">
+      <label for="name">name</label>
+      <input type="text" id="name" autocomplete="off">
+      <label for="email">email</label>
+      <input type="text" id="email">
+      <label for="message">message</label>
+      <textarea id="message"></textarea>
+      <div class="submit-container">
+        <input type="submit" class="btn" value="send message">
+      </div>
+    </form>
+    <div class="infos-contact">
+      <div>
+        <h3>address</h3>
+        <p><br>1234 Somewhere Road #87257<br>Nashville, TN 00000-0000</p>
+      </div>
+      <div>
+        <h3>phone</h3>
+        <p>(000) 000-0000</p>
+      </div>
+      <div>
+        <h3>email</h3>
+        <p>info@untitled.ltd</p>
+      </div>
+      <div class="social">
+        <h3>social</h3>
+        <ul>
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><i class="fa-brands fa-facebook-f"></i></li>
+          <li><i class="fa-brands fa-instagram"></i></li>
+          <li><i class="fa-brands fa-github"></i></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
